--- a/css/radio_nav.css
+++ b/css/radio_nav.css
@@ -1,22 +1,8 @@
 #tree-range-select-buttons {
-  height: 400px;
   overflow: auto;
   border: 1px solid grey;
   border-radius: 3px;
   padding: 4px;
-}
-
-fieldset {
-  margin-inline: 2px;
-  border-width: 2px;
-  border-style: groove;
-  border-color: threedface;
-  padding-block: 0.35em 0.625em;
-  padding-inline: 0.5em;
-
-  legend {
-    font-size: 16px;
-  }
 }
 
 li {
@@ -28,12 +14,10 @@ ul {
 }
 
 /** Hide the radiobox. */
-input {
-  position: absolute !important;
-  clip: rect(0, 0, 0, 0);
+input[type=radio] {
+  opacity: 0;
   height: 1px;
-  width: 1px;
-  border: 0;
+  visibility: hidden;
   overflow: hidden;
 }
 
@@ -42,7 +26,6 @@ label div {
   color: rgba(0, 0, 0, 0.6);
   font-size: 14px;
   line-height: 1;
-  /* text-align: center; */
   padding: 8px 16px;
   border: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
