--- a/css/typography.css
+++ b/css/typography.css
@@ -1,6 +1,5 @@
 body {
   font-family: Helvetica, Arial;
-  padding: 1.5rem;
 }
 
 .regular_list ul,
